New game start layout

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,15 +14,43 @@
 </head>
 <body>
 
-  <!-- New game menu start -->
+  <main class="main-container">
+      <!-- New game menu start -->
 
-  Pick player 1's mark
-  Remember: X goes first
+    <div class="game-menu">
+      <div class="game-logo"><img src="./assets/logo.svg" alt="game logo"> </div>
 
-  New Game (vs CPU)
-  New Game (vs player)
+      <div class="mark-options">
+        <p class="first-mark">Pick player 1's mark</p>
+        <div class="pick-mark">
+          <div class="icon-container">
+            <img class="icon x-icon" src="./assets/icon-x.svg" alt="x icon">
+          </div>
+          <div class="icon-container">
+            <img class="icon o-icon" src="./assets/icon-o.svg" alt="o icon">
+          </div>
+          
+        </div>
+        <p class="remember">Remember: X goes first</p>
+      </div>
 
-  <!-- New game menu end -->
+      <div class="buttons">
+        <button class="new-game cpu">New Game (vs CPU)</button>
+        <button class="new-game player">New Game (vs player)</button>
+      </div>
+    </div>
+
+      <!-- New game menu end -->
+  </main>
+
+
+  
+  
+
+  
+  
+
+
 
   <!-- Game board start -->
 
