Game solo Initialize

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -18,16 +18,16 @@
       <!-- New game menu start -->
 
     <div class="game-menu">
-      <div class="game-logo"><img src="./assets/logo.svg" alt="game logo"> </div>
+      <div class="game-logo"><img src="../assets/logo.svg" alt="game logo"> </div>
 
       <div class="mark-options">
         <p class="first-mark">Pick player 1's mark</p>
         <div class="pick-mark">
           <div class="icon-container">
-            <img class="icon x-icon" src="./assets/icon-x.svg" alt="x icon">
+            <img class="icon x-icon" src="../assets/icon-x.svg" alt="x icon">
           </div>
           <div class="icon-container">
-            <img class="icon o-icon" src="./assets/icon-o.svg" alt="o icon">
+            <img class="icon o-icon" src="../assets/icon-o.svg" alt="o icon">
           </div>
           
         </div>
@@ -35,8 +35,12 @@
       </div>
 
       <div class="buttons">
-        <button class="new-game cpu">New Game (vs CPU)</button>
-        <button class="new-game player">New Game (vs player)</button>
+        <button class="new-game cpu">
+          <a href="">New Game (vs CPU)</a>
+        </button>
+        <button class="new-game player">
+          <a href="">New Game (vs player)</a>
+        </button>
       </div>
     </div>
 
@@ -52,9 +56,9 @@
 
 
 
-  <!-- Game board start -->
 
-  <!-- x/o icon --> turn
+
+ 
 
   X (You) <!-- Your score -->
   Ties <!-- Ties score -->
