--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -20,7 +20,7 @@
     <div class="game-menu">
       <div class="game-logo"><img src="../assets/logo.svg" alt="game logo"> </div>
 
-      <div class="mark-options">
+      <div class="game-menu-options">
         <p class="first-mark">Pick player 1's mark</p>
         <div class="pick-mark">
           <div class="icon-container">
@@ -36,7 +36,7 @@
 
       <div class="buttons">
         <button class="new-game cpu">
-          <a href="">New Game (vs CPU)</a>
+          <a href="../mobile-game-solo/solo.html" target="_blank">New Game (vs CPU)</a>
         </button>
         <button class="new-game player">
           <a href="">New Game (vs player)</a>
