--- a/mobile-game-solo/solo.html
+++ b/mobile-game-solo/solo.html
@@ -32,7 +32,52 @@
                     <img src="../assets/icon-restart.svg" alt="Restart icon">
                 </div>
             </div>
-            
+            <!-- Game board -->
+            <div class="game-board">
+                <div class="game-mark">
+                    <img class="random-mark" src="#" alt="">
+                </div>
+                <div class="game-mark">
+                    <img class="random-mark" src="../assets/icon-x.svg" alt="">
+                </div>
+                <div class="game-mark">
+                    <img class="random-mark" src="../assets/icon-o.svg" alt="">
+                </div>
+                <div class="game-mark">
+                    <img class="random-mark" src="../assets/icon-x.svg" alt="">
+                </div>
+                <div class="game-mark">
+                    <img src="../assets/icon-o.svg" alt="" class="random-mark">
+                </div>
+                <div class="game-mark">
+                    <img src="../assets/icon-x.svg" alt="" class="random-mark">
+                </div>
+                <div class="game-mark">
+                    <img src="#" alt="" class="random-mark">
+                </div>
+                <div class="game-mark">
+                    <img src="../assets/icon-o.svg" alt="" class="random-mark">
+                </div>
+                <div class="game-mark">
+                    <img src="../assets/icon-x.svg" alt="" class="random-mark">
+                </div>
+            </div>
+
+            <!-- Game information -->
+            <div class="info-container">
+                <div class="match-info your-score">
+                    <p class="info">X (You)</p>
+                    <div class="results your-score">14</div>
+                </div>
+                <div class="match-info ties-score">
+                    <p class="info">Ties</p>
+                    <div class="results tie-matches">32</div>
+                </div>
+                <div class="match-info cpu-score">
+                    <p class="info">0 (CPU)</p>
+                    <div class="results cpu-score">11</div>
+                </div>
+            </div>
         </div>
 
 
