you lost... pop-up added

--- a/mobile-game-solo/solo.html
+++ b/mobile-game-solo/solo.html
@@ -16,6 +16,8 @@
   <!-- Game board start -->
     <main class="container">
 
+ 
+   
         <div class="game-container">
 
             <div class="head-options">
@@ -78,10 +80,37 @@
                     <div class="results cpu-score">11</div>
                 </div>
             </div>
+
+
+
+ 
+        </div>
+                            <!-- You lost pop up -->
+                            
+        <div class="pop-up-you-lost">
+            <div class="you-lost-container">
+
+                <div class="pop-up-info">
+                    <p class="default-font">oh no, you lost...</p>
+                    <div class="take-round">
+                        <div class="img-mark-turn">
+                            <img src="../assets/icon-o.svg" alt="icon mark turn">
+                        </div>
+                        <p>takes the round</p>
+                    </div>
+                    <div class="btns">
+                        <button class="btn quit">quit</button>
+                        <button class="btn next-round">next round</button>
+                    </div>
+
+                </div>
+
+            </div> 
         </div>
 
-
     </main>
+
+ 
 
 </body>
 </html>
