Restart game pop-up added

--- a/mobile-game-solo/solo.html
+++ b/mobile-game-solo/solo.html
@@ -108,6 +108,25 @@
             </div> 
         </div>
 
+        <!-- restart pop-up -->
+
+        <div class="pop-up-restart">
+            <div class="restart-container">
+
+                <div class="pop-up-info">
+                    <div class="restart-game">
+                        <p>restart game?</p>
+                    </div>
+                    <div class="btns">
+                        <button class="btn cancel-btn">no, cancel</button>
+                        <button class="btn restart-btn">yes, restart</button>
+                    </div>
+
+                </div>
+
+            </div> 
+        </div>
+
     </main>
 
  
